Poprawka install/uninstall
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@6 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -2,23 +2,27 @@
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/kadu/images/
 	$(INSTALL_DATA) msg.wav $(kde_datadir)/kadu/
-	$(INSTALL_DATA) $(srcdir)/images/beer.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/cell.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/coffee.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/cry.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/flower.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/gift.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/grin.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/heart.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/phone.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/rose.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/sad.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/smile.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/surprised.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/thumbsdown.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/thumbsup.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/wink.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/hearts.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/kiss.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/blush.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) $(srcdir)/images/bye.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/beer.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/cell.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/coffee.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/cry.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/flower.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/gift.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/grin.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/heart.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/phone.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/rose.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/sad.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/smile.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/surprised.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/thumbsdown.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/thumbsup.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/wink.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/hearts.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/kiss.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/blush.gif $(kde_datadir)/kadu/images/
+	$(INSTALL_DATA) images/bye.gif $(kde_datadir)/kadu/images/
+
+uninstall-local:
+	rm -f $(kde_datadir)/kadu/*
+	rm -f $(kde_datadir)/kadu/images/*
