Poprawka install/uninstall
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@7 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -24,5 +24,5 @@ install-data-local:
 	$(INSTALL_DATA) images/bye.gif $(kde_datadir)/kadu/images/
 
 uninstall-local:
-	rm -f $(kde_datadir)/kadu/*
+	rm -f $(kde_datadir)/kadu/msg.wav
 	rm -f $(kde_datadir)/kadu/images/*
