--- a/libgadu/lib/Makefile
+++ b/libgadu/lib/Makefile
@@ -1,4 +1,14 @@
-# $Id: Makefile,v 1.1 2002/07/09 22:22:02 chilek Exp $
+# $Id: Makefile,v 1.2 2002/07/21 11:22:12 chilek Exp $
+
+prefix = /usr
+exec_prefix = ${prefix}
+libdir = ${exec_prefix}/lib
+includedir = ${prefix}/include
+
+# increased with ABI changes
+VERSION_MAJOR=0
+# increased with API changes
+VERSION_MINOR=10
 
 CC = gcc 
 CFLAGS = -g -O2 -ggdb -I.. -fPIC -Wall
@@ -9,13 +19,9 @@ AR = /usr/bin/ar
 INSTALL = /usr/bin/install -c
 RANLIB = ranlib
 
-prefix = /usr
-exec_prefix = ${prefix}
-libdir = ${exec_prefix}/lib
-
 OBJS = common.o libgadu.o search.o pubdir.o http.o dcc.o userlist.o events.o
 
-SHARED = libgadu.so.0.9.0
+SHARED = libgadu.so.$(VERSION_MAJOR).$(VERSION_MINOR)
 STATIC = libgadu.a
 
 all:	static shared
@@ -23,7 +29,7 @@ all:	static shared
 #
 
 clean:
-	rm -f *.o *~ core $(STATIC) $(SHARED)
+	rm -f *.o *.a *.so *.so.* *~ core
 
 distclean:	clean
 	rm -f Makefile
@@ -41,17 +47,20 @@ $(STATIC): $(OBJS)
 shared:	$(SHARED)
 
 $(SHARED): $(OBJS)
-	$(CC) -g -shared -Wl,-soname,libgadu.so -o $(SHARED) $(OBJS) $(LIBS) -lc
+	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(OBJS) $(LIBS) -lc
 
 #
 
 install: install-shared install-static
 
-install-shared:
-	$(INSTALL) -d $(libdir)
-	$(INSTALL) -m 755 $(SHARED) $(libdir)
+install-common:
+	$(INSTALL) -d $(DESTDIR)$(includedir)
+	$(INSTALL) -m 644 libgadu.h $(DESTDIR)$(includedir)
+	$(INSTALL) -d $(DESTDIR)$(libdir)
 
-install-static:
-	$(INSTALL) -d $(libdir)
-	$(INSTALL) -m 755 $(STATIC) $(libdir)
+install-shared:	install-common
+	$(INSTALL) -m 755 $(SHARED) $(DESTDIR)$(libdir)
+
+install-static:	install-common
+	$(INSTALL) -m 755 $(STATIC) $(DESTDIR)$(libdir)
 	
