Poprawka make clean itp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@124 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,9 @@ EXTRA_DIST = admin kadu.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ka
 
 AUTOMAKE_OPTIONS = foreign 
 
-mostlyclean-local:
-	cd libgadu && $(MAKE) mostlyclean
+# libgadu nie obsluguje mostlyclean
+#mostlyclean-local:
+#	cd libgadu && $(MAKE) mostlyclean
 
 clean-local:
 	cd libgadu && $(MAKE) clean
@@ -14,5 +15,6 @@ clean-local:
 distclean-local:
 	cd libgadu && $(MAKE) distclean
 
-maintainer-clean-local:
-	cd libgadu && $(MAKE) maintainer-clean
+# libgady nie obsluguje maintainer-clean
+#maintainer-clean-local:
+#	cd libgadu && $(MAKE) maintainer-clean
