--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.2 2002/07/21 11:17:54 chilek Exp $
+# $Id: Makefile.in,v 1.3 2002/08/17 20:24:55 chilek Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -6,22 +6,27 @@ libdir = @libdir@
 includedir = @includedir@
 
 # increased with ABI changes
-VERSION_MAJOR=0
+VERSION_MAJOR=2
 # increased with API changes
-VERSION_MINOR=10
+VERSION_MINOR=0
 
 CC = @CC@ 
-CFLAGS = @CFLAGS_LIBGADU@ -I.. -fPIC -Wall
+CFLAGS = @CFLAGS_LIBGADU@ -I.. -Wall
 LIBS = @LIBS_LIBGADU@
 
 MAKE = @MAKE@
 AR = @AR@
 INSTALL = @INSTALL@
 RANLIB = @RANLIB@
+STRIP = @STRIP@
+LN_S = @LN_S@
 
 OBJS = common.o libgadu.o search.o pubdir.o http.o dcc.o userlist.o events.o
+LOBJS = common.lo libgadu.lo search.lo pubdir.lo http.lo dcc.lo userlist.lo events.lo
 
-SHARED = libgadu.so.$(VERSION_MAJOR).$(VERSION_MINOR)
+SHAREDMM = libgadu.so
+SHAREDM = $(SHAREDMM).$(VERSION_MAJOR)
+SHARED = $(SHAREDM).$(VERSION_MINOR)
 STATIC = libgadu.a
 
 all:	@static@ @shared@
@@ -29,7 +34,7 @@ all:	@static@ @shared@
 #
 
 clean:
-	rm -f *.o *.a *.so *.so.* *~ core
+	rm -f *.o *.lo *.a *.so *.so.* *~ core
 
 distclean:	clean
 	rm -f Makefile
@@ -44,10 +49,15 @@ $(STATIC): $(OBJS)
 
 #
 
+%.lo:	%.c
+	$(CC) -c $(CPPFLAGS) $(CFLAGS) -fPIC $< -o $@
+
 shared:	$(SHARED)
 
-$(SHARED): $(OBJS)
-	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(OBJS) $(LIBS) -lc
+$(SHARED): $(LOBJS)
+	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(LOBJS) $(LIBS) -lc
+	$(LN_S) -f $(SHARED) $(SHAREDM)
+	$(LN_S) -f $(SHARED) $(SHAREDMM)
 
 #
 
@@ -58,9 +68,14 @@ install-common:
 	$(INSTALL) -m 644 libgadu.h $(DESTDIR)$(includedir)
 	$(INSTALL) -d $(DESTDIR)$(libdir)
 
-install-shared:	install-common
+install-shared:	install-common @strip_libgadu_so@
 	$(INSTALL) -m 755 $(SHARED) $(DESTDIR)$(libdir)
+	cd $(DESTDIR)$(libdir) && $(LN_S) -f $(SHARED) $(SHAREDM)
+	cd $(DESTDIR)$(libdir) && $(LN_S) -f $(SHARED) $(SHAREDMM)
 
 install-static:	install-common
 	$(INSTALL) -m 755 $(STATIC) $(DESTDIR)$(libdir)
-	
+
+strip-libgadu-so:
+	$(STRIP) $(SHARED)
+
