--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,12 +1,13 @@
-dnl $Id: configure.in,v 1.2 2002/07/13 08:37:24 chilek Exp $
+dnl $Id: configure.in,v 1.3 2002/08/17 20:24:55 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
-
+AC_PREREQ(2.50)
 AC_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_RANLIB
+AC_PROG_LN_S
 
 AC_PATH_PROG(GMAKE, gmake, no)
 if test "x$GMAKE" = "xno"; then
@@ -23,17 +24,26 @@ if test "x$AR" = "xno"; then
   AC_MSG_ERROR([ar ])
 fi
 
+AC_PATH_PROG(STRIP, strip, :)
+
 AC_NEED_STDINT_H
 AC_C_BIGENDIAN
 
 AC_SUBST(CFLAGS_LIBGADU)
 AC_SUBST(LIBS_LIBGADU)
 
+AC_SUBST(strip_ekg, "")
+AC_SUBST(strip_ioctld, "")
+AC_SUBST(strip_libgadu_so, "")
+
 AC_SUBST(ioctld, "")
 AC_SUBST(install_ioctld, "")
 
 AC_SUBST(shared, "")
 AC_SUBST(install_shared, "")
+
+AC_SUBST(libgadu_a, "")
+AC_SUBST(lgadu, "")
 
 AC_SUBST(static, "static")
 AC_SUBST(install_static, "install-static")
@@ -42,24 +52,24 @@ AC_SUBST(ekg, "")
 AC_SUBST(install_ekg, "")
 AC_SUBST(clean_ekg, "")
 AC_SUBST(distclean_ekg, "")
+AC_SUBST(uninstall_ekg, "")
+
+AC_SUBST(make_ekgwap, "")
+AC_SUBST(install_ekgwap, "")
 
 AC_SUBST(ui_readline_o, "")
 AC_SUBST(ui_ncurses_o, "")
 
 # najpierw sprawdzamy te opcje, które s± wspólne dla libgadu i ekg.
 
-dnl AC_ARG_WITH(ccache,
-dnl   [  --without-ccache        Disable use of ccache when found])
-dnl
-dnl if test "x$with_ccache" = "x$no"; then
-dnl   AC_CHECK_PROG(CCACHE, ccache, [CC="ccache $CC"])
-dnl fi
+AC_ARG_ENABLE(debug, 
+  [  --disable-debug         Compile without debugging symbols and messages])
 
-AC_ARG_WITH(debug, 
-  [  --without-debug         Compile without debug (-Wall, -ggdb)])
-
-if test "x$with_debug" = "xno"; then 
+if test "x$enable_debug" = "xno"; then 
   CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
+  strip_ekg="strip-ekg"
+  strip_ioctld="strip-ioctld"
+  strip_libgadu_so="strip-libgadu-so"
 else
   CFLAGS="$CFLAGS -ggdb" 
 fi
@@ -69,8 +79,35 @@ AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")
 
 # zachowujemy opcje dla libgadu
 
-CFLAGS_LIBGADU="$CFLAGS"
-LIBS_LIBGADU="$LIBS"
+CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
+LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
+
+# jak± wersjê libgadu kompilujemy?
+
+AC_ARG_ENABLE(shared,
+  [  --enable-shared         Compile shared version of libgadu])
+  
+if test "x$enable_shared" = "xyes"; then
+  shared="shared"
+  install_shared="install-shared"
+fi
+
+AC_ARG_ENABLE(static,
+  [  --disable-static        Don't compile static version of libgadu
+
+Optional ekg Features:])
+
+if test "x$enable_static" = "xno"; then
+  static=""
+  install_static=""
+fi
+
+if test "x$enable_static" = "xno" -a "x$enable_shared" != "xyes"; then
+  AC_MSG_ERROR([You must choose either static or shared version of libgadu.])
+fi
+
+AC_ARG_ENABLE(dynamic,
+  [  --enable-dynamic        Link ekg dynamically with libgadu])
 
 # i zaczynamy wykrywaæ ¶mieci dla ekg
 
@@ -129,7 +166,7 @@ if test -d src; then
     LIBS="$READLINE_LIBS $LIBS"
     CFLAGS="$CFLAGS $READLINE_INCLUDES"
 
-    AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key])
+    AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key rl_bind_key_in_map])
   fi
 
   AC_ARG_WITH(libgsm,
@@ -141,37 +178,37 @@ if test -d src; then
       LIBS="$LIBS -lgsm"])
   fi
  
-  AC_ARG_WITH(ioctld,
-    [  --with-ioctld           Compile with ioctld (Linux only)])
+  AC_CHECK_HEADERS(linux/kd.h, [have_linux_kd_h=yes])
 
-  if test "x$with_ioctld" = "xyes"; then 
-    CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"\$(prefix)/bin/ioctld\\\""
+  AC_ARG_ENABLE(wap,
+    [  --enable-wap            Compile WAP gateway])
+
+  if test "x$enable_wap" = "xyes"; then
+    make_ekgwap="make-ekgwap"
+    install_ekgwap="install-ekgwap"
+    AC_DEFINE(WITH_WAP)
+  fi
+
+  AC_ARG_ENABLE(ioctld,
+    [  --enable-ioctld         Compile ioctld (Linux only, autodetected)])
+
+  if test "x$enable_ioctld" = "xyes" -o "x$have_linux_kd_h" = "xyes" -a "x$enable_ioctld" != "xno"; then 
+    CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"${libexecdir}/ioctld\\\""
     ioctld="ioctld"
     install_ioctld="install-ioctld"
   fi
 
-  AC_ARG_WITH(shared,
-    [  --with-shared           Compile shared version of libgadu])
-
-  if test "x$with_shared" = "xyes"; then 
-    shared="shared"
-    install_shared="install-shared"
+  libgadu_a="../lib/libgadu.a"
+  lgadu=""
+  if test "x$enable_static" = "xno" -o "x$enable_dynamic" = "xyes"; then 
+    libgadu_a=""
+    lgadu="-lgadu"
   fi
   ekg="ekg"
   install_ekg="install-ekg"
   clean_ekg="clean-ekg"
   distclean_ekg="distclean-ekg"
-else
-  shared="shared"
-  install_shared="install-shared"
-  
-  AC_ARG_WITH(static,
-    [  --without-static        Don't compile static version of libgadu])
-
-  if test "x$with_static" = "xno"; then
-    static=""
-    install_static=""
-  fi
+  uninstall_ekg="uninstall-ekg"
 fi
 
 AC_CONFIG_FILES(Makefile lib/Makefile examples/Makefile)
