--- a/libgadu/lib/Makefile
+++ b/libgadu/lib/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.2 2002/07/21 11:22:12 chilek Exp $
+# $Id: Makefile,v 1.3 2002/08/19 10:56:53 chilek Exp $
 
 prefix = /usr
 exec_prefix = ${prefix}
@@ -6,22 +6,27 @@ libdir = ${exec_prefix}/lib
 includedir = ${prefix}/include
 
 # increased with ABI changes
-VERSION_MAJOR=0
+VERSION_MAJOR=2
 # increased with API changes
-VERSION_MINOR=10
+VERSION_MINOR=0
 
 CC = gcc 
-CFLAGS = -g -O2 -ggdb -I.. -fPIC -Wall
+CFLAGS = -g -O2 -ggdb -I.. -Wall
 LIBS = 
 
 MAKE = /usr/bin/gmake
 AR = /usr/bin/ar
 INSTALL = /usr/bin/install -c
 RANLIB = ranlib
+STRIP = @STRIP@
+LN_S = @LN_S@
 
 OBJS = common.o libgadu.o search.o pubdir.o http.o dcc.o userlist.o events.o
+LOBJS = common.lo libgadu.lo search.lo pubdir.lo http.lo dcc.lo userlist.lo events.lo
 
-SHARED = libgadu.so.$(VERSION_MAJOR).$(VERSION_MINOR)
+SHAREDMM = libgadu.so
+SHAREDM = $(SHAREDMM).$(VERSION_MAJOR)
+SHARED = $(SHAREDM).$(VERSION_MINOR)
 STATIC = libgadu.a
 
 all:	static shared
@@ -29,7 +34,7 @@ all:	static shared
 #
 
 clean:
-	rm -f *.o *.a *.so *.so.* *~ core
+	rm -f *.o *.lo *.a *.so *.so.* *~ core
 
 distclean:	clean
 	rm -f Makefile
@@ -44,10 +49,15 @@ $(STATIC): $(OBJS)
 
 #
 
+%.lo:	%.c
+	$(CC) -c $(CPPFLAGS) $(CFLAGS) -fPIC $< -o $@
+
 shared:	$(SHARED)
 
-$(SHARED): $(OBJS)
-	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(OBJS) $(LIBS) -lc
+$(SHARED): $(LOBJS)
+	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(LOBJS) $(LIBS) -lc
+	$(LN_S) -f $(SHARED) $(SHAREDM)
+	$(LN_S) -f $(SHARED) $(SHAREDMM)
 
 #
 
@@ -58,9 +68,14 @@ install-common:
 	$(INSTALL) -m 644 libgadu.h $(DESTDIR)$(includedir)
 	$(INSTALL) -d $(DESTDIR)$(libdir)
 
-install-shared:	install-common
+install-shared:	install-common @strip_libgadu_so@
 	$(INSTALL) -m 755 $(SHARED) $(DESTDIR)$(libdir)
+	cd $(DESTDIR)$(libdir) && $(LN_S) -f $(SHARED) $(SHAREDM)
+	cd $(DESTDIR)$(libdir) && $(LN_S) -f $(SHARED) $(SHAREDMM)
 
 install-static:	install-common
 	$(INSTALL) -m 755 $(STATIC) $(DESTDIR)$(libdir)
-	
+
+strip-libgadu-so:
+	$(STRIP) $(SHARED)
+
