--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -1,28 +1,28 @@
 
 install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) msg.wav $(kde_datadir)/kadu/
-	$(INSTALL_DATA) images/beer.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/cell.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/coffee.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/cry.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/flower.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/gift.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/grin.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/heart.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/phone.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/rose.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/sad.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/smile.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/surprised.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/thumbsdown.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/thumbsup.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/wink.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/hearts.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/kiss.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/blush.gif $(kde_datadir)/kadu/images/
-	$(INSTALL_DATA) images/bye.gif $(kde_datadir)/kadu/images/
+	$(mkinstalldirs) "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) msg.wav "$(DESTDIR)/$(kde_datadir)/kadu/"
+	$(INSTALL_DATA) images/beer.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/cell.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/coffee.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/cry.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/flower.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/gift.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/grin.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/heart.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/phone.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/rose.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/sad.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/smile.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/surprised.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/thumbsdown.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/thumbsup.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/wink.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/hearts.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/kiss.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/blush.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(INSTALL_DATA) images/bye.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
 
 uninstall-local:
-	rm -f $(kde_datadir)/kadu/msg.wav
-	rm -f $(kde_datadir)/kadu/images/*
+	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/msg.wav"
+	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/images"/*
