--- a/libgadu/Makefile.in
+++ b/libgadu/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.3 2002/08/17 20:24:55 chilek Exp $
+# $Id: Makefile.in,v 1.4 2002/09/12 21:05:00 chilek Exp $
 
 prefix = @prefix@
 datadir = @datadir@
@@ -13,7 +13,7 @@ INSTALL = @INSTALL@
 
 #
 
-all:	libgadu @ekg@ @make_ekgwap@
+all:	configure libgadu @ekg@ @make_ekgwap@
 
 libgadu:
 	cd lib && $(MAKE) all
@@ -26,6 +26,11 @@ make-ekgwap:
 
 examples:
 	cd examples && $(MAKE) all
+
+#
+
+configure:	configure.in m4/* acconfig.h
+	./autogen.sh
 
 #
 
