--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,13 +1,15 @@
-dnl $Id: configure.in,v 1.3 2002/08/17 20:24:55 chilek Exp $
+dnl $Id: configure.in,v 1.4 2002/09/12 21:05:00 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
 AC_CONFIG_HEADER(config.h)
 
+
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PROG_LN_S
+
 
 AC_PATH_PROG(GMAKE, gmake, no)
 if test "x$GMAKE" = "xno"; then
@@ -59,6 +61,7 @@ AC_SUBST(install_ekgwap, "")
 
 AC_SUBST(ui_readline_o, "")
 AC_SUBST(ui_ncurses_o, "")
+AC_SUBST(python_o, "")
 
 # najpierw sprawdzamy te opcje, które s± wspólne dla libgadu i ekg.
 
@@ -109,12 +112,26 @@ fi
 AC_ARG_ENABLE(dynamic,
   [  --enable-dynamic        Link ekg dynamically with libgadu])
 
+AC_MSG_CHECKING([for C99-compatible vsnprintf()])
+AC_TRY_RUN(
+ [#include <stdio.h>
+ 
+  int main()
+  {
+    char tmp;
+    return (snprintf(&tmp, sizeof(tmp), "test") != 4);
+  }], [AC_DEFINE(HAVE_C99_VSNPRINTF)
+  AC_MSG_RESULT([yes])], [AC_MSG_RESULT([no])])
+
 # i zaczynamy wykrywaæ ¶mieci dla ekg
 
 if test -d src; then
 
   AC_ARG_ENABLE(ui-readline,
     [  --disable-ui-readline   Disable readline UI])
+
+  AC_ARG_ENABLE(force-readline,
+    [  --enable-force-readline Force use of readline])
 
   AC_ARG_ENABLE(ui-ncurses,
     [  --enable-ui-ncurses     Enable ncurses UI])
@@ -124,11 +141,19 @@ if test -d src; then
     ui_readline_o="ui-readline.o"
   fi
 
+  if test -f .enable-ui-ncurses; then
+    enable_ui_ncurses=yes
+  fi
+  
   if test "x$enable_ui_ncurses" = "xyes"; then
     AC_DEFINE(WITH_UI_NCURSES)
     ui_ncurses_o="ui-ncurses.o"
   fi
-    
+  
+  if test "x$enable_ui_ncurses" = "xyes" -a "x$enable_force_readline" = "xyes"; then 
+    AC_DEFINE(WITH_FORCE_READLINE)
+  fi
+  
   if test "x$enable_ui_ncurses" = "xyes"; then 
     AC_CHECK_NCURSES
 
@@ -169,16 +194,61 @@ if test -d src; then
     AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key rl_bind_key_in_map])
   fi
 
+  # sprawdzamy libgsm.so, <gsm.h> i <linux/soundcard.h>
+  
   AC_ARG_WITH(libgsm,
     [  --without-libgsm        Compile without GSM support])
 
   if test "x$with_libgsm" != "xno"; then
-    AC_CHECK_LIB(gsm, gsm_decode, [
-      AC_CHECK_HEADERS([gsm.h linux/soundcard.h])
-      LIBS="$LIBS -lgsm"])
+    AC_CHECK_LIB(gsm, gsm_decode, [ 
+      AC_CHECK_HEADERS(gsm.h, [
+        AC_CHECK_HEADERS(linux/soundcard.h, [
+          AC_DEFINE(HAVE_VOIP)
+          LIBS="$LIBS -lgsm"
+	])
+      ])
+    ])
   fi
- 
-  AC_CHECK_HEADERS(linux/kd.h, [have_linux_kd_h=yes])
+
+  # sprawdzamy pythona
+    
+  AC_CHECK_PYTHON
+  
+  if test "x$have_python" = "xtrue"; then
+      python_o="python.o"
+      LIBS="$LIBS $PYTHON_LIBS"
+      CFLAGS="$CFLAGS $PYTHON_INCLUDES"
+  fi
+
+  # sprawdzamy libz.so, <zlib.h>
+  
+  AC_ARG_WITH(zlib,
+    [  --without-zlib          Compile without zlib (compressed logs)])
+
+  if test "x$with_zlib" != "xno"; then
+    AC_CHECK_LIB(z, gzopen, [
+      AC_CHECK_HEADERS(zlib.h, [
+        AC_DEFINE(HAVE_ZLIB)
+        LIBS="$LIBS -lz"
+      ])
+    ])
+  fi
+
+dnl   # sprawdzamy libbz2.so, <bzlib.h>
+dnl   
+dnl   AC_ARG_WITH(bzip2,
+dnl     [  --without-bzip2         Compile without bzip2 (compressed logs)])
+dnl 
+dnl   if test "x$with_bzip2" != "xno"; then
+dnl     AC_CHECK_LIB(bz2, BZ2_bzopen, [
+dnl       AC_CHECK_HEADERS(bzlib.h, [
+dnl         AC_DEFINE(HAVE_BZIP2)
+dnl         LIBS="$LIBS -lbz2"
+dnl       ])
+dnl     ])
+dnl   fi
+
+  # sprawdzamy, czy u¿ytkownik chce ekgwap
 
   AC_ARG_ENABLE(wap,
     [  --enable-wap            Compile WAP gateway])
@@ -189,13 +259,17 @@ if test -d src; then
     AC_DEFINE(WITH_WAP)
   fi
 
-  AC_ARG_ENABLE(ioctld,
-    [  --enable-ioctld         Compile ioctld (Linux only, autodetected)])
+  # sprawdzamy ioctld
 
-  if test "x$enable_ioctld" = "xyes" -o "x$have_linux_kd_h" = "xyes" -a "x$enable_ioctld" != "xno"; then 
-    CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"${libexecdir}/ioctld\\\""
-    ioctld="ioctld"
-    install_ioctld="install-ioctld"
+  AC_ARG_ENABLE(ioctld,
+    [  --enable-ioctld         Compile ioctld (Linux only)])
+
+  if test "x$enable_ioctld" = "xyes"; then 
+    AC_CHECK_HEADERS(linux/kd.h, [
+      CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"${libexecdir}/ioctld\\\""
+      ioctld="ioctld"
+      install_ioctld="install-ioctld"
+    ])
   fi
 
   libgadu_a="../lib/libgadu.a"
