--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.4 2002/09/12 21:05:00 chilek Exp $
+dnl $Id: configure.in,v 1.5 2002/09/22 19:23:35 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
@@ -162,6 +162,7 @@ if test -d src; then
     fi
 
     LIBS="$LIBS $CURSES_LIBS"
+    LDFLAGS="$LDFLAGS $CURSES_LIBS"
     CFLAGS="$CFLAGS $CURSES_INCLUDES"
   fi
 
@@ -172,13 +173,15 @@ if test -d src; then
     if test "x$with_termcap" = "xno"; then
       TERMCAP_LIB=""
     else
-      AC_CHECK_LIB(termcap, tgetent, TERMCAP_LIB=-ltermcap)
+      AC_CHECK_LIB(termcap, tgetent, [TERMCAP_LIB="-ltermcap"])
       LIBS="$LIBS $TERMCAP_LIB"
+      LDFLAGS="$LDFLAGS $TERMCAP_LIB"
     fi
 
     if test "x$TERMCAP_LIB" = "x" -a "x$CURSES_LIBS" = "x"; then
       AC_CHECK_NCURSES
       LIBS="$LIBS $CURSES_LIBS"
+      LDFLAGS="$LDFLAGS $CURSES_LIBS"
       CFLAGS="$CFLAGS $CURSES_INCLUDES"
     fi
       
@@ -189,6 +192,7 @@ if test -d src; then
     fi
 
     LIBS="$READLINE_LIBS $LIBS"
+    LDFLAGS="$READLINE_LIBS $LDFLAGS"
     CFLAGS="$CFLAGS $READLINE_INCLUDES"
 
     AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key rl_bind_key_in_map])
@@ -215,9 +219,9 @@ if test -d src; then
   AC_CHECK_PYTHON
   
   if test "x$have_python" = "xtrue"; then
-      python_o="python.o"
-      LIBS="$LIBS $PYTHON_LIBS"
-      CFLAGS="$CFLAGS $PYTHON_INCLUDES"
+    python_o="python.o"
+    LIBS="$LIBS $PYTHON_LIBS"
+    CFLAGS="$CFLAGS $PYTHON_INCLUDES"
   fi
 
   # sprawdzamy libz.so, <zlib.h>
