--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -26,13 +26,15 @@ userbox.cpp userbox.h \
 userinfo.cpp userinfo.h \
 userlist.cpp userlist.h \
 vuser.cpp vuser.h \
-dock_widget.cpp dock_widget.h
+dock_widget.cpp dock_widget.h \
+emoticons.cpp emoticons.h
 
 METASOURCES = AUTO
 
 INCLUDES = $(all_includes) 
 kadu_LDADD = $(all_libraries) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) -L../libgadu/lib -lgadu
 #kadu_DEPENDENCIES = ../libgadu/lib/libgadu.a
+AM_CPPFLAGS = -DBINDIR="\"$(bindir)\"" -DDATADIR="\"$(datadir)\""
 
 EXTRA_DIST = hi16-app-kadu.png hi32-app-kadu.png hi48-app-kadu.png kadu.desktop
 
