--- a/libgadu/examples/Makefile.in
+++ b/libgadu/examples/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.4 2002/09/12 21:05:00 chilek Exp $
+# $Id: Makefile.in,v 1.5 2002/10/24 11:03:57 adrian Exp $
 
 CC = @CC@
 CFLAGS = @CFLAGS@ -I.. -I../lib -I../src
