--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.7 2002/09/28 00:13:01 chilek Exp $
+# $Id: Makefile.in,v 1.8 2002/10/24 11:03:57 adrian Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
