wybor emotikonow + kadubis
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@270 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -1,30 +1,13 @@
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(mkinstalldirs) "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/"	
 	$(INSTALL_DATA) msg.wav "$(DESTDIR)/$(kde_datadir)/kadu/"
-	$(INSTALL_DATA) images/beer.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/cell.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/coffee.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/cry.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/flower.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/gift.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/grin.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/heart.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/phone.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/rose.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/sad.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/smile.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/surprised.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/thumbsdown.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/thumbsup.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/wink.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/hearts.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/kiss.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/blush.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/bye.gif "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/emoticons_regexp "$(DESTDIR)/$(kde_datadir)/kadu/images/"
-	$(INSTALL_DATA) images/emoticons_selector "$(DESTDIR)/$(kde_datadir)/kadu/images/"
+	$(mkinstalldirs) "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/kadubis/"	
+	$(INSTALL_DATA) themes/emoticons/kadubis/* "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/kadubis/"
+	$(mkinstalldirs) "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/original_kadu/"
+	$(INSTALL_DATA) themes/emoticons/original_kadu/* "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/original_kadu/"
 
 uninstall-local:
 	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/msg.wav"
-	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/images"/*
+	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/kadubis"/*
+	rm -f "$(DESTDIR)/$(kde_datadir)/kadu/themes/emoticons/original_kadu"/*
