--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.6 2002/10/24 11:03:57 adrian Exp $
+dnl $Id: configure.in,v 1.7 2002/11/14 17:13:15 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
@@ -6,6 +6,7 @@ AC_CONFIG_HEADER(config.h)
 
 
 AC_PROG_CC
+AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PROG_LN_S
@@ -78,6 +79,10 @@ dnl sparc libs...
 AC_CHECK_LIB(nsl, t_accept, LIBS="$LIBS -lnsl")
 AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")
 
+dnl basename - get rid of libgen
+AC_CHECK_HEADERS(libgen.h)
+AC_CHECK_FUNC(dirname, , [OBJS="$OBJS ../compat/dirname.o"])
+
 # zachowujemy opcje dla libgadu
 
 CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
@@ -87,10 +92,13 @@ LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
 
 AC_ARG_ENABLE(shared,
   [  --enable-shared         Compile shared version of libgadu])
+
+lib_shared_enabled=no
   
 if test "x$enable_shared" = "xyes"; then
   shared="shared"
   install_shared="install-shared"
+  lib_shared_enabled=yes
 fi
 
 AC_ARG_ENABLE(static,
@@ -98,9 +106,12 @@ AC_ARG_ENABLE(static,
 
 Optional ekg Features:])
 
+lib_static_enabled=yes
+
 if test "x$enable_static" = "xno"; then
   static=""
   install_static=""
+  lib_static_enabled=no
 fi
 
 if test "x$enable_static" = "xno" -a "x$enable_shared" != "xyes"; then
@@ -126,33 +137,42 @@ AC_TRY_RUN(
 if test -d src; then
 
   AC_ARG_ENABLE(ui-readline,
-    [  --disable-ui-readline   Disable readline UI])
+    [  --enable-ui-readline    Enable readline UI])
 
-  AC_ARG_ENABLE(force-readline,
-    [  --enable-force-readline Force use of readline])
+  AC_ARG_ENABLE(force-ncurses,
+    [  --disable-force-ncurses Force use of ncurses UI])
 
   AC_ARG_ENABLE(ui-ncurses,
-    [  --enable-ui-ncurses     Enable ncurses UI])
+    [  --disable-ui-ncurses    Disable ncurses UI])
 
-  if test "x$enable_ui_readline" != "xno"; then
-    AC_DEFINE(WITH_UI_READLINE, 1, [define if you want ui_readline])
-    OBJS="$OBJS ui-readline.o"
-  fi
-
-  if test -f .enable-ui-ncurses; then
-    enable_ui_ncurses=yes
-  fi
-  
-  if test "x$enable_ui_ncurses" = "xyes"; then
-    AC_DEFINE(WITH_UI_NCURSES, 1, [define if you want ui_ncurses])
+  if test "x$enable_ui_ncurses" != "xno"; then
+    AC_DEFINE(WITH_UI_NCURSES, 1, [define if you want ui-ncurses])
     OBJS="$OBJS ui-ncurses.o"
+    ui_ncurses_enabled=yes
+    ui_ncurses_default=yes
+  fi
+
+  # je¶li nie chcemy ncurses, budujemy readline.
+  
+  if test "x$enable_ui_ncurses" = "xno" -a "x$enable_ui_readline" != "xno"; then
+    enable_ui_readline=yes
+  fi
+
+  if test "x$enable_ui_readline" = "xyes"; then
+    AC_DEFINE(WITH_UI_READLINE, 1, [define if you want ui-readline])
+    OBJS="$OBJS ui-readline.o"
+    ui_readline_enabled=yes
+    ui_ncurses_default=no
+    ui_readline_default=yes
   fi
   
-  if test "x$enable_ui_ncurses" = "xyes" -a "x$enable_force_readline" = "xyes"; then 
-    AC_DEFINE(WITH_FORCE_READLINE, 1, [define if you want ui_readline as default])
+  if test "x$enable_ui_readline" = "xyes" -a "x$enable_force_ncurses" = "xyes"; then 
+    AC_DEFINE(WITH_FORCE_NCURSES, 1, [define if you want ui-ncurses as default])
+    ui_ncurses_default=yes
+    ui_readline_default=no
   fi
   
-  if test "x$enable_ui_ncurses" = "xyes"; then 
+  if test "x$enable_ui_ncurses" != "xno"; then 
     AC_CHECK_NCURSES
 
     if test "x$have_ncurses" = "x"; then
@@ -166,7 +186,7 @@ if test -d src; then
   AC_ARG_WITH(termcap, 
     [  --without-termcap       Used to force ncurses for readline])
 
-  if test "x$enable_ui_readline" != "xno"; then
+  if test "x$enable_ui_readline" = "xyes"; then
     if test "x$with_termcap" = "xno"; then
       TERMCAP_LIB=""
     else
@@ -200,11 +220,20 @@ if test -d src; then
   if test "x$with_libgsm" != "xno"; then
     AC_CHECK_LIB(gsm, gsm_decode, [ 
       AC_CHECK_HEADERS(gsm.h, [
+        have_gsm_h=yes
+      ], [
+        AC_CHECK_HEADERS(gsm/gsm.h, [
+	  have_gsm_h=yes
+	  CFLAGS="$CFLAGS -I/usr/include/gsm"
+	])
+      ])
+      if test "x$have_gsm_h" = "xyes"; then
         AC_CHECK_HEADERS(linux/soundcard.h, [
           AC_DEFINE(HAVE_VOIP, 1, [define if you want VOIP support])
 	  LDFLAGS="-lgsm $LDFLAGS"
+	  OBJS="$OBJS voice.o"
 	])
-      ])
+      fi
     ])
   fi
 
@@ -220,17 +249,12 @@ if test -d src; then
 
   # sprawdzamy openssl
 
-  AC_ARG_WITH(openssl,
-    [  --without-openssl       Compile without OpenSSL])
+  AC_CHECK_OPENSSL
 
-  if test "x$with_openssl" != "xno"; then
-    AC_CHECK_LIB(ssl, RSA_new, [
-      AC_CHECK_HEADERS(openssl/rsa.h, [
-        AC_DEFINE(HAVE_OPENSSL, 1, [define if you have OpenSSL])
-	LDFLAGS="-lssl -lcrypto $LDFLAGS"
-	OBJS="$OBJS sim.o"
-      ])
-    ])
+  if test "x$have_openssl" = "xtrue"; then
+    OBJS="$OBJS sim.o"
+    LDFLAGS="$OPENSSL_LIBS $LDFLAGS"
+    CFLAGS="$CFLAGS $OPENSSL_INCLUDES"
   fi
 
   # sprawdzamy libz.so, <zlib.h>
@@ -272,6 +296,10 @@ dnl   fi
     AC_DEFINE(WITH_WAP, 1, [define if you want "WAP" support])
   fi
 
+  # sprawdzamy, czy system ma getopt_long
+
+  AC_CHECK_FUNC(getopt_long, , [OBJS="$OBJS ../compat/getopt.o ../compat/getopt1.o"; CFLAGS="-I../compat $CFLAGS"])
+
   # sprawdzamy ioctld
 
   AC_ARG_ENABLE(ioctld,
@@ -285,17 +313,21 @@ dnl   fi
     ])
   fi
 
-  # sprawdzamy, czy system ma getopt_long
-
-  AC_CHECK_FUNC(getopt_long, , [OBJS="$OBJS ../compat/getopt.o ../compat/getopt1.o"; CFLAGS="-I../compat $CFLAGS"])
+  # Wszystkie testy nale¿y dodawaæ POWY¯EJ testu ioctld, poniewa¿ w przypadku
+  # jego powodzenia zawarto¶æ CFLAGS skutecznie blokuje dzia³anie gcc
+  # odpalanego przez ./configure
   
   # ustawiamy opcje
 
   if test "x$enable_static" = "xno" -o "x$enable_dynamic" = "xyes"; then 
+    lib_shared_default=yes
+    lib_static_default=no
     lgadu="-lgadu"
   else
     OBJS="$OBJS ../lib/libgadu.a"
     lgadu=""
+    lib_shared_default=no
+    lib_static_default=yes
   fi
   ekg="ekg"
   install_ekg="install-ekg"
@@ -311,4 +343,63 @@ fi
 
 AC_OUTPUT
 
+echo
+echo "configured options:"
+
+if test "x$lib_static_enabled" = "xyes"; then
+  if test "x$lib_static_default" = "xyes"; then
+    echo " - static libgadu: enabled (default)"
+  else
+    echo " - static libgadu: enabled"
+  fi
+else
+  echo " - static libgadu: disabled"
+fi
+
+if test "x$lib_shared_enabled" = "xyes"; then
+  if test "x$lib_shared_default" = "xyes"; then
+    echo " - shared libgadu: enabled (default)"
+  else
+    echo " - shared libgadu: enabled"
+  fi
+else
+  echo " - shared libgadu: disabled"
+fi
+
+if test -d src; then
+
+  if test "x$have_openssl" = "xtrue"; then
+    echo " - openssl: enabled"
+  else
+    echo " - openssl: disabled"
+  fi
+
+  if test "x$ui_readline_enabled" = "xyes"; then
+    if test "x$ui_readline_default" = "xyes"; then
+      echo " - ui-readline: enabled (default)"
+    else
+      echo " - ui-readline: enabled"
+    fi
+  else
+    echo " - ui-readline: disabled"
+  fi
+
+  if test "x$ui_ncurses_enabled" = "xyes"; then
+    if test "x$ui_ncurses_default" = "xyes"; then
+      echo " - ui-ncurses: enabled (default)"
+    else
+      echo " - ui-ncurses: enabled"
+    fi
+  else
+    echo " - ui-ncurses: disabled"
+  fi
+fi
+
+echo
+echo "******************************************************************"
+echo "** Uwaga! Zmieniony zosta³ domy¶lny interfejs ekg z readline na **"
+echo "** ncurses. Je¶li z jakiego¶ powodu chcesz u¿ywaæ poprzedniego  **"
+echo "** interfejsu, uruchom ,,./configure --disable-ui-ncurses''     **"
+echo "******************************************************************"
+echo
 
