--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.8 2002/10/24 11:03:57 adrian Exp $
+# $Id: Makefile.in,v 1.9 2002/11/14 17:13:15 chilek Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
